# TIMS_analyses

./: .gitignore  AGENTS.md  ANALYSIS_SUMMARY_exp06_propagation.txt  ANSWER.md  ARTIFACT_REMOVAL_PIPELINE_SUMMARY.md  CLAUDE.md  COMPLETION_SUMMARY.txt  INDEX_all_corrections.md  MEMO.md  MEMO_EXP06_pipeline_analysis.md  MEMO_SNR_Selection_Results.md  MEMO_component_selection_bias.md  MEMO_exp05_analysis.md  MEMO_exp06_artifact_propagation_summary.md  MEMO_exp06_sass_artifact_recovery.md  PLAN_correct_sass_ssd_separation.md  PROMPT_exp06_pipeline_explanation.xml  PSEUDOCODE_exp06_run02_fixed_raw_channel.md  QUICK_REFERENCE.txt  README_CORRECTED_PIPELINE.md  SKRIPT.md  SKRIPTS.md  SKRIPT_EXAMPLE.md  SKRIPT_YOUR_ANALYSIS.md  START_HERE.md  SUMMARY_pipeline_corrections.md  TASK_exp06_artifact_spatial_modeling.md  VISUAL_COMPARISON_old_vs_new.md  WIKI_LINT_REPORT.md  WORKFLOW_COMPLETE.txt  _test_find_peaks_artifact.py  _test_plot.py  analyses_artifact_exp05.py  analyses_ica_topo_exp05.py  analyses_qc_exp06_skript.py  analyses_qc_exp06_skript_pseudocode.py  analyses_ssd_exp05.py  analyses_ssd_exp05_skript.py  analyze_baseline_gt.py  analyze_exp06_run02_all_methods_itpc_timecourse.py  (+96 more)
tims-main/: .gitignore  Cargo.toml  README.md  config.py  flake.nix  notes.md  package.nix  pyproject.toml
tims-main/client/: Cargo.toml
tims-main/docs/: BOM.xlsx
tims-main/fpga/: adc_driver.sv  adc_test.sv  amplitude_setpoint_filter.sv  bram_dual_port.sv  cartesian_to_polar.sv  coil_controller.sv  coil_pair_controller.sv  cross_correlation.sv  cross_correlation_two_signals.sv  cross_correlation_two_signals_sparse.sv  current_adcs.sv  deadtime.sv  flow_sensor.sv  full_bridge_driver.sv  magnitude_phase_estimator.sv  main.sv  modulation_to_relative_phase.sv  multiplier.sv  mux_3bit.sv  phase_shift_pwm.sv  pi_controller.sv  polar_to_cartesian.sv  reference_generator.sv  relative_phase_to_modulation.sv  remote_io.sv  setpoint_generator.sv  spi_interface.sv  spi_receiver.sv
tims-main/interface/: Cargo.toml
tims-main/nixos/: app.nix  default.nix  globals.nix  hardware-configuration.nix  rename-fix.nix  rpi-config.nix  system.nix
tims-main/protocols/: Cargo.toml
tims-main/remote/: .mxproject  CMakeLists.txt  (+2 more)
(+413 files in other folders)
