[workspace]
resolver = "3"
members = ["protocols", "server", "interface", "client"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = { version = "0.4.29", features = ["serde"] }
strum = { version = "0.28", features = ["derive"] }
circular-buffer = "1.2.0"
fern = "0.7.1"
