[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
protocols = { path = "../protocols" }
serde = { workspace = true }
log = { workspace = true }
circular-buffer = { workspace = true }
egui = "0.33.3"
eframe = "0.33.3"
egui-wgpu = "0.33.3"
wgpu = "27.0.1"
egui-toast = "0.19.1"
serde_json = "1.0.149"
app_dirs2 = "2.5.5"
env_logger = "0.11.9"
strum = { workspace = true }
egui_plot = "0.34.1"
