[package]
name = "tims-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
circular-buffer = "1.1.0"
eframe = { version = "0.31.1", default-features = false, features = ["glow", "x11"] }
egui = "0.31.1"
egui-file-dialog = "0.10.0"
egui-toast = "0.17.0"
egui_keyboard = "0.1.0"
egui_plot = "0.32.1"
local-ip-address = "0.6.10"
ndarray = "0.17.2"
npyz = "0.8.4"
rodio = "0.21.1"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
simple_moving_average = "1.0.2"
strum = { version = "0.27", features = ["derive"] }
