[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rppal = "0.22.1"
simple_moving_average = "1.0.2"
humantime = "2.3.0"
protocols = { path = "../protocols" }
serde = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
circular-buffer = { workspace = true }
